--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,11 +1,4 @@
-<div *ngIf="movie">
-    <div>
-        <span>Movie Title: </span><span>{{ movie.title }}</span>
-    </div>
-    <div>
-        <span>Movie Votes: </span><span>{{ movie.vote_average }}</span>
-    </div>
-    <div>
-        <span>Movie Release Date: </span><span>{{ movie.release_date}}</span>
-    </div>
+<div class="what-to-watch">
+  <h1>CAN`T CHOOSE WHAT TO WATCH? TRY THIS:</h1>
+  <app-show-description [movieId]="movie.id"></app-show-description>
 </div>
