--- a/src/app/components/show-description/show-description.component.html
+++ b/src/app/components/show-description/show-description.component.html
@@ -1,6 +1,6 @@
-<div class="show-description">
-  <div class="poster"><img src="{{posterUrl}}" alt="{{movie.title}}'s poster"></div>
-  <div>
+<div *ngIf="movie" class="show-description">
+  <div class="show-description_container poster" id="poster"><img src="{{posterUrl}}" alt="poster"></div>
+  <div class="show-description_container" id="description">
     <h2>{{movie.title}}</h2>
     <span *ngFor="let genre of movie.genres" class="genre">{{genre.name | lowercase}}; </span>
     <p>{{movie.overview}}</p>
