--- a/src/app/components/show-description/show-description.component.scss
+++ b/src/app/components/show-description/show-description.component.scss
@@ -1,12 +1,20 @@
+:host-context(.trending-container) {
+  .show-description_container {
+    flex: 3;
+  }
+
+  .poster {
+    flex: 1;
+  }
+}
+
 .show-description {
   font-size: 1.2rem;
   box-sizing: border-box;
-  width: 700px;
-  height: 500px;
-  margin: auto;
+  max-height: fit-content;
   display: flex;
 
-  div {
+  &_container {
     box-sizing: border-box;
     width: 100%;
     height: 90%;
@@ -15,10 +23,10 @@
   .poster {
     display: flex;
     justify-content: center;
+    align-content: center;
 
     img {
-      height: 90%;
-      align-self: center;
+      width: 90%;
       border-radius: 10px;
     }
   }
