--- a/src/app/components/tabs/home-tab/home-tab.component.html
+++ b/src/app/components/tabs/home-tab/home-tab.component.html
@@ -1,4 +1,4 @@
 <main class="home-container main-content">
   <h1 class="main-content_title">can`t choose what to watch? try this:</h1>
-  <app-show-description [movieId]="movieId"></app-show-description>
+  <app-show-description [showType]="'movie'" [showId]="movieId"></app-show-description>
 </main>
