--- a/src/app/components/tabs/detail-tab/detail-tab.component.html
+++ b/src/app/components/tabs/detail-tab/detail-tab.component.html
@@ -1,12 +1,12 @@
-<div *ngIf="movie">
-  <div>
-    <span>Movie Title: </span><span>{{ movie.title }}</span>
-  </div>
-  <div>
-    <span>Movie Votes: </span><span>{{ movie.vote_average }}</span>
-  </div>
-  <div>
-    <span>Movie Release Date: </span><span>{{ movie.release_date}}</span>
-  </div>
-</div>
-<img alt="{{movie.title + '\'s poster'}}" src="{{posterUrl}}">
+<!--<div *ngIf="movie">-->
+<!--  <div>-->
+<!--    <span>Movie Title: </span><span>{{ movie.title }}</span>-->
+<!--  </div>-->
+<!--  <div>-->
+<!--    <span>Movie Votes: </span><span>{{ movie.vote_average }}</span>-->
+<!--  </div>-->
+<!--  <div>-->
+<!--    <span>Movie Release Date: </span><span>{{ movie.release_date}}</span>-->
+<!--  </div>-->
+<!--</div>-->
+<!--<img alt="{{movie.title + '\'s poster'}}" src="{{posterUrl}}">-->
