--- a/src/app/components/tabs/trending-tab/trending-tab.component.html
+++ b/src/app/components/tabs/trending-tab/trending-tab.component.html
@@ -2,7 +2,7 @@
   <h1 class="main-content_title">Top shows this week:</h1>
   <ol *ngIf="movieIDs">
     <li *ngFor="let id of movieIDs" class="trending-container">
-      <app-show-description [movieId]="id"></app-show-description>
+      <app-show-description [showType]="'movie'" [showId]="id"></app-show-description>
     </li>
   </ol>
 
