--- a/src/app/components/tabs/detail-tab/detail-tab.component.html
+++ b/src/app/components/tabs/detail-tab/detail-tab.component.html
@@ -1,12 +1,4 @@
-<!--<div *ngIf="movie">-->
-<!--  <div>-->
-<!--    <span>Movie Title: </span><span>{{ movie.title }}</span>-->
-<!--  </div>-->
-<!--  <div>-->
-<!--    <span>Movie Votes: </span><span>{{ movie.vote_average }}</span>-->
-<!--  </div>-->
-<!--  <div>-->
-<!--    <span>Movie Release Date: </span><span>{{ movie.release_date}}</span>-->
-<!--  </div>-->
-<!--</div>-->
-<!--<img alt="{{movie.title + '\'s poster'}}" src="{{posterUrl}}">-->
+<main class="main-content trending-container detail-container">
+  <app-show-description [showId]="routerParams.showId" [showType]="routerParams.showType"></app-show-description>
+</main>
+
