--- a/src/app/components/tabs/search-tab/search-tab.component.html
+++ b/src/app/components/tabs/search-tab/search-tab.component.html
@@ -1,7 +1,7 @@
 <main class="main-content search-container">
   <app-search-form (searchParams)="search($event)"></app-search-form>
   <div class="results">
-    <app-show-description *ngFor="let show of searchResults" [showType]="type"
-                          [showId]="show.id"></app-show-description>
+    <app-show-description *ngFor="let id of searchResultsIds" [showType]="type"
+                          [showId]="id"></app-show-description>
   </div>
 </main>
