--- a/src/app/components/tabs/detail-tab/detail-tab.component.html
+++ b/src/app/components/tabs/detail-tab/detail-tab.component.html
@@ -1,4 +1,6 @@
 <main class="main-content trending-container detail-container">
-  <app-show-description [showId]="routerParams.showId" [showType]="routerParams.showType"></app-show-description>
+  <app-show-description
+    [showId]="routerParams.showId"
+    [showType]="routerParams.showType"></app-show-description>
 </main>
 
