--- a/src/app/components/tabs/trending-tab/trending-tab.component.html
+++ b/src/app/components/tabs/trending-tab/trending-tab.component.html
@@ -1,5 +1,5 @@
 <main class="main-content">
-  <h1 class="main-content_title">Top shows this week:</h1>
+  <h1 class="main-content_title">Top movies this week:</h1>
   <ol *ngIf="showIds">
     <li *ngFor="let id of showIds" class="trending-container">
       <app-show-description [showType]="'movie'" [showId]="id"></app-show-description>
