--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,5 @@
 <nav class="navbar">
   <div class="navbar-btn"><a routerLink="/home">home</a></div>
   <div class="navbar-btn"><a routerLink="/search">search</a></div>
-<!--  <div class="navbar-btn"><a routerLink="/genres">genres</a></div>-->
-  <div class="navbar-btn"><a routerLink="trending">trending</a></div>
+  <div class="navbar-btn"><a routerLink="/trending">trending</a></div>
 </nav>
