--- a/src/app/components/tabs/home-tab/home-tab.component.html
+++ b/src/app/components/tabs/home-tab/home-tab.component.html
@@ -1,4 +1,5 @@
 <main class="home-container main-content">
   <h1 class="main-content_title">can`t choose what to watch? try this:</h1>
+  <button class="load-btn reload-btn" (click)="showRandomMovie()">&#8634;</button>
   <app-show-description [showType]="'movie'" [showId]="showId"></app-show-description>
 </main>
