--- a/src/app/components/tabs/search-tab/search-tab.component.html
+++ b/src/app/components/tabs/search-tab/search-tab.component.html
@@ -1,7 +1,11 @@
 <main class="main-content search-container">
   <app-search-form (searchParams)="search($event)"></app-search-form>
-  <div class="results">
-    <app-show-description *ngFor="let id of searchResultsIds" [showType]="type"
+  <div class="results" *ngIf="searchResults">
+    <app-show-description *ngFor="let id of searchResults.ids"
+                          [showType]="searchParams.type"
                           [showId]="id"></app-show-description>
   </div>
+  <button *ngIf="searchResults && !isFinished()"
+          (click)="showMore()"
+          class="load-btn more-btn">show more...</button>
 </main>
