--- a/src/styles.scss
+++ b/src/styles.scss
@@ -22,3 +22,9 @@ body, html {
     text-align: center;
   }
 }
+
+.load-btn {
+  display: block;
+  margin: 20px auto;
+  font-family: Roboto, sans-serif;
+}
