added onDestroy unsubscriptions

--- a/src/app/tabs/home-tab/home-tab.component.html
+++ b/src/app/tabs/home-tab/home-tab.component.html
@@ -1,5 +1,7 @@
 <main class="home-container main-content">
   <h1 class="main-content_title">can`t choose what to watch? try this:</h1>
   <button class="load-btn reload-btn" (click)="showRandomMovie()">&#8634;</button>
-  <app-show-description [showType]="'movie'" [showId]="showId$ | async"></app-show-description>
+  <app-show-description *ngIf="showId$"
+                        [showType]="'movie'"
+                        [showId]="showId$ | async"></app-show-description>
 </main>
